Fix artist image on Safari
Ahhh yes, here we see a wild Safari, being completely broken and not working like every other browser.

Previously, when the viewport got small on Safari, the image would take up the entire background.

This is a little hacky, causing the image to not scale correctly on some very specific screen sizes, and ideally we'll come up with a better solution, but this gets the job done for now.

--- a/static/style/artist.css
+++ b/static/style/artist.css
@@ -19,8 +19,14 @@
     grid-area: image;
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     border-radius: var(--radius);
+}
+
+@media only screen and (min-width: 513px) { 
+    .artist-image {
+        height: 100%;
+    }
 }
 
 .artist-info {
@@ -149,7 +155,7 @@
         grid-template-rows: auto;
         grid-template-areas:
             "image name"
-            "imagesocial"
+            "image social"
             "description description"
             "songs songs";
     }
